--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container">
-  <app-articles></app-articles>
-  <router-outlet></router-outlet>
-</div>
+<!-- <div class="container"> -->
+  <!-- <router-outlet></router-outlet> -->
+  <app-register></app-register>
+<!-- </div> -->
