--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,15 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
-$primaryColor: #7E8AE0;
-$primaryLigthColor: #BBC3FF;
-$primaryDarkColor: #4B57A9;
+$primaryColor: #3DAEFF;
+$primaryLigthColor: #91D0FF;
+$primaryDarkColor: #0692F1;
 
-$secondaryColor: #8E8FA6;
-$secondaryLigthColor: #C4C5DD;
-$secondaryDarkColor: #5B5D72;
+$secondaryColor: #FEC92A;
+$secondaryLigthColor: #FFE083;
+$secondaryDarkColor: #FEB207;
 
 $errorColor: #FF5449;
-$errorLigthColor: #FFB4AB;
-$errorDarkColor: #BA1A1A;
+$successColor: greenyellow;
 
 $textColor: #000000;
 $bgColor: #FFFFFF;
