--- a/frontend/src/app/sidenav/sidenav.component.html
+++ b/frontend/src/app/sidenav/sidenav.component.html
@@ -1,7 +1,7 @@
 <div class="enlaces">
     <a routerLink="home" routerLinkActive="active-link"><span class="material-symbols-outlined">home</span>   Home</a>
     <a routerLink="notifications" routerLinkActive="active-link"><span class="material-symbols-outlined">notifications</span>  Notifications</a>
-    <a routerLink="see_profile" routerLinkActive="active-link"><span class="material-symbols-outlined">visibility</span>    See Profile</a>
+    <a routerLink="profile" routerLinkActive="active-link"><span class="material-symbols-outlined">visibility</span>    See Profile</a>
     <a routerLink="edit_profile" routerLinkActive="active-link"><span class="material-symbols-outlined">edit</span>    Edit Profile</a>
     <a (click)="logOut()"><span class="material-symbols-outlined">logout</span>    Log out</a>
 </div>
