--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- <div class="container"> -->
   <!-- <app-modal></app-modal> -->
+  <app-sidenav></app-sidenav>
   <router-outlet></router-outlet>
 <!-- </div> -->
