--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,7 +1,6 @@
 <app-navbar></app-navbar>
-<!-- <app-sidenav></app-sidenav> -->
 <div class="container">
     <div *ngFor="let possit of posts">
-        <app-post-card [id]="possit.id" [user_id]="possit.user_id" [post]="possit.post" [created_at]="possit.created_at"></app-post-card>        
+        <app-post-card [id]="possit.id" [username]="possit.username" [email]="possit.email" [profile_picture]="possit.profile_picture" [post]="possit.post" [file_name]="possit.file_name" [created_at]="possit.created_at"></app-post-card>        
     </div>
 </div>
