--- a/frontend/src/app/navbar/navbar.component.scss
+++ b/frontend/src/app/navbar/navbar.component.scss
@@ -1,10 +1,9 @@
 @import '../../styles.scss';
 @import '../../fonts.scss';
 
-nav {
+.mat-toolbar {
     background-color: $primaryDarkColor;
-    display: flex;
-    flex-direction: col;
+    height: 7%;
 
     img{
         width: 100px;
@@ -16,11 +15,13 @@ nav {
         padding-right: 80px;
     }
 
-    .user{
-        img{
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-        }
+    .example-spacer {
+        flex: 1 1 auto;
+      }
+
+    #user_profile{
+        width: 90px;
+        height: 90px;
+        border-radius: 50%;
     }
 }
