--- a/frontend/src/app/post-card/post-card.component.html
+++ b/frontend/src/app/post-card/post-card.component.html
@@ -1,23 +1,16 @@
-<div class="row">
-    <div class="col s12 m6">
-        <div class="card">
-            <div class="card-panel">
-                <div class="row valign-wrapper">
-                    <div class="col s2">
-                        <span class="black-text">
-                            <p>{{user_id}}</p>
-                        </span>
-                    </div>
-                    <div class="col s10">
-                        <span class="black-text">
-                            <p>{{created_at}}</p>
-                        </span>
-                    </div>
-                </div>
-            </div>
-            <div class="card-content white-text">
-                <p>{{post}}</p>
-            </div>
-        </div>
+<mat-card class="example-card">
+  <mat-card-header>
+    <div mat-card-avatar>
+      <img id="user_profile" [src]="profile_picture">
     </div>
-</div>
+    <mat-card-title>{{username}}</mat-card-title>
+    <mat-card-subtitle>{{created_at}}</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    <p>
+      {{post}}
+    </p>
+  </mat-card-content>
+  <img *ngIf="file_name!=null" mat-card-image [src]="image">
+</mat-card>
+<br>
