--- a/frontend/src/app/sidenav/sidenav.component.scss
+++ b/frontend/src/app/sidenav/sidenav.component.scss
@@ -7,11 +7,10 @@
     width: 250px;
     position: fixed;
     z-index: 1;
-    top: 200px;
+    top: 12%;
     left: 0;
     overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
+    padding-top: 20px;
     a{
         padding: 8px 8px 8px 32px;
         text-decoration: none;
