--- a/frontend/src/fonts.scss
+++ b/frontend/src/fonts.scss
@@ -1,8 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Andika&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sigmar+One&display=swap');
 
 $titleFont: 'Lora', serif;
 $contentFont: 'Andika', sans-serif;
+
+@mixin logoFont(){
+    font-family: 'Sigmar One', cursive;
+    font-size: 40px;
+}
 
 @mixin titleFont($size){
     font-family: 'Lora', serif;
