--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,7 @@
-<!-- <div class="container"> -->
-  <!-- <app-modal></app-modal> -->
-  <app-sidenav></app-sidenav>
+<app-navbar></app-navbar>
+<div class="space"></div>
+<div class="grid">
   <router-outlet></router-outlet>
-<!-- </div> -->
+  <div></div>
+</div>
+<app-sidenav></app-sidenav>
