--- a/frontend/src/app/create-post/create-post.component.html
+++ b/frontend/src/app/create-post/create-post.component.html
@@ -1,11 +1,19 @@
-<div>
-    <h2>Create new post</h2>
-    <form (ngSubmit)="submit()" [formGroup]="formPost">
-        <textarea placeholder="Write something here" class="form-control" formControlName="post" required></textarea>
-        <br>
-        <input type="file" class="form-control" formControlName="post_file">
-        <br>
-        <button type="submit">Send</button>
-    </form>
+<div class="post">
+    <mat-card class="example-card">
+        <mat-card-header>
+            <h2>Create new post</h2>
+        </mat-card-header>
+        <mat-card-content>
+            <form (ngSubmit)="submit()" [formGroup]="formPost">
+                <textarea placeholder="Write something here" class="form-control" formControlName="post" required></textarea>
+                <br><br>
+                <label role="button" type="button" for="file" class="label_file">Choose files</label>
+                <input id="file" type="file" (change)="fileEvent($event)" class="form-control" formControlName="post_file">
+                <br><br>
+                <div class="send_button">
+                    <button type="submit">Send</button>
+                </div>
+            </form>
+        </mat-card-content>
+    </mat-card>
 </div>
-
