--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,10 +1,12 @@
-<app-navbar></app-navbar>
-<div class="container">
-    <div></div>
-    <div>
-        <div *ngFor="let possit of posts">
-            <app-post-card [id]="possit.id" [username]="possit.username" [email]="possit.email" [profile_picture]="possit.profile_picture" [post]="possit.post" [file_name]="possit.file_name" [created_at]="possit.created_at"></app-post-card>        
-        </div>
-    </div>
+<div class="tab">
+    <mat-card>
+        <mat-card-content>New Stuff</mat-card-content>
+    </mat-card>
+</div>
+<div *ngFor="let possit of posts" class="post_card">
+    <app-post-card [id]="possit.id" [username]="possit.username" [profile_picture]="possit.profile_picture"
+        [post]="possit.post" [file_name]="possit.file_name" [created_at]="possit.created_at"></app-post-card>
+</div>
+<div class="create_post">
     <app-create-post></app-create-post>
 </div>
