--- a/frontend/src/app/post-card/post-card.component.scss
+++ b/frontend/src/app/post-card/post-card.component.scss
@@ -2,10 +2,10 @@
 @import '../../fonts.scss';
 
 mat-card{
-    border-radius: 3%;
+    border-radius: 5px;
     mat-card-header{
-        border-top-left-radius: 3%;
-        border-top-right-radius: 3%;
+        border-top-right-radius: 5px;
+        border-top-left-radius: 5px;
         background-color: $primaryColor;
         mat-card-title{
             @include titleFont(25px);
@@ -15,10 +15,11 @@ mat-card{
         }
     }
     mat-card-content{
+        padding-top: 10px;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
         background-color: $secondaryLigthColor;
         @include contentFont(16px);
-        border-bottom-left-radius: 3%;
-        border-bottom-right-radius: 3%;
     }
 }
 
@@ -26,4 +27,8 @@ mat-card{
     width: 110%;
     height: 110%;
     border-radius: 50%;
+}
+
+#post_image{
+    width: 100%;
 }
