--- a/frontend/src/app/sidenav/sidenav.component.scss
+++ b/frontend/src/app/sidenav/sidenav.component.scss
@@ -11,11 +11,12 @@
     left: 0;
     overflow-x: hidden;
     padding-top: 20px;
+    cursor: pointer;
     a{
         padding: 8px 8px 8px 32px;
         text-decoration: none;
         font-size: 25px;
-        color: #818181;
+        color: black;
         display: block;
         transition: 0.3s;
     }
