--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -7,6 +7,9 @@
     <app-post-card [id]="possit.id" [username]="possit.username" [profile_picture]="possit.profile_picture"
         [post]="possit.post" [file_name]="possit.file_name" [created_at]="possit.created_at"></app-post-card>
 </div>
+<div>
+    <button (click)="reloadPosts()">Show more</button>
+</div>
 <div class="create_post">
     <app-create-post></app-create-post>
 </div>
