--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -1,1 +1,9 @@
-<p>profile works!</p>
+<div class="tab">
+    <mat-card>
+        <mat-card-content>My Posts</mat-card-content>
+    </mat-card>
+</div>
+<p>{{username}}</p>
+<div class="user_card">
+    <app-user-card></app-user-card>
+</div>
