Modificado estilo login y register, añadiendo profile

--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -1,15 +1,18 @@
-<div class="container">
-    <h1>Login</h1>
-    <form (ngSubmit)="submit()" [formGroup]="formLogin">
-        <div class="grid1">
-            <label for="email">Email</label>
-            <input type="text" class="form-control" formControlName="email" required>
-            <label for="password">Password</label>
-            <input type="password" class="form-control" formControlName="password" required>
-            <button type="submit">Sign in</button>
-            <br>
-            <p>Don't have an account?</p>
-            <button (click)="redirectRegister()">Sign up</button>
-        </div>
-    </form>
+<div class="login">
+    <mat-card class="example-card">
+        <mat-card-content>
+            <form (ngSubmit)="submit()" [formGroup]="formLogin">
+                <div class="grid1">
+                    <h2>Login</h2>
+                    <label for="email">Email</label>
+                    <input type="text" class="form-control" formControlName="email" required>
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control" formControlName="password" required>
+                    <button class="button1" type="submit">Sign in</button>
+                    <p>Don't have an account?</p>
+                    <button class="button2" (click)="redirectRegister()">Sign up</button>
+                </div>
+            </form>
+        </mat-card-content>
+    </mat-card>
 </div>
