--- a/frontend/src/app/auth/login/login.component.scss
+++ b/frontend/src/app/auth/login/login.component.scss
@@ -1,37 +1,70 @@
 @import '../../../styles.scss';
 @import '../../../fonts.scss';
 
-.container{
-    background-color: white;
-    align-content: center;
-    margin: auto;
-    width: 25%;
-    border-radius: 10px;
+// .container {
+//     background-color: white;
+//     align-content: center;
+//     margin: auto;
+//     width: 25%;
+//     border-radius: 10px;
 
-    margin: 0;
+//     margin: 0;
+//     position: absolute;
+//     top: 50%;
+//     left: 50%;
+//     -ms-transform: translate(-50%, -50%);
+//     transform: translate(-50%, -50%);
+
+// }
+
+.login {
+    @include contentFont(16px);
     position: absolute;
     top: 50%;
     left: 50%;
-    -ms-transform: translate(-50%, -50%);
+    // -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+    width: 30%;
+    h2 {
+        @include titleFont(25px);
+        text-align: center;
+    }
 
-    .grid1{
+    .grid1 {
+        margin: auto;
+        width: 80%;
         display: grid;
         grid-template-columns: auto;
-        button{
-            width: 60%;
-        }
     }
-    .grid2{
-        display: grid;
-        grid-template-columns: auto auto;
-    }
-}
 
-input{
-    width: 90%;
-    border: 2px solid $primaryColor;
-    border-radius: 5px;
-    background-color: $secondaryLigthColor;
-    margin: 8px 0;
+    label{
+        padding-top: 10px;
+    }
+
+    input {
+        @include contentFont(16px);
+        border: 2px solid $primaryColor;
+        border-radius: 5px;
+        margin: 8px 0;
+    }
+
+    p{
+        text-align: center;
+    }
+
+    button{
+        height: 40px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        @include titleFont(20px);
+        border: none;
+        border-radius: 15px;
+        cursor: pointer;
+    }
+    .button1{
+        background-color: $secondaryColor;
+    }
+    .button2{
+        background-color: $primaryColor;
+    }
 }
