--- a/frontend/src/app/auth/register/register.component.scss
+++ b/frontend/src/app/auth/register/register.component.scss
@@ -1,37 +1,67 @@
 @import '../../../styles.scss';
 @import '../../../fonts.scss';
 
-.container{
-    background-color: white;
-    align-content: center;
-    margin: auto;
-    width: 25%;
-    border-radius: 10px;
-
-    margin: 0;
+.register {
+    @include contentFont(16px);
     position: absolute;
     top: 50%;
     left: 50%;
-    -ms-transform: translate(-50%, -50%);
+    // -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+    width: 30%;
+    h2 {
+        @include titleFont(25px);
+        text-align: center;
+    }
 
-    .grid1{
+    .grid1 {
+        margin: auto;
+        width: 80%;
         display: grid;
         grid-template-columns: auto;
-        button{
-            width: 60%;
-        }
     }
-    .grid2{
+
+    .grid2 {
+        margin: auto;
+        width: 80%;
         display: grid;
         grid-template-columns: auto auto;
+        div{
+            input{
+                width: 100%;
+            }
+            margin-right: 10px;
+        }
     }
-}
 
-input{
-    width: 90%;
-    border: 2px solid $primaryColor;
-    border-radius: 5px;
-    background-color: $secondaryLigthColor;
-    margin: 8px 0;
+    label{
+        padding-top: 10px;
+    }
+
+    input {
+        @include contentFont(16px);
+        border: 2px solid $primaryColor;
+        border-radius: 5px;
+        margin: 8px 0;
+    }
+
+    p{
+        text-align: center;
+    }
+
+    button{
+        height: 40px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        @include titleFont(20px);
+        border: none;
+        border-radius: 15px;
+        cursor: pointer;
+    }
+    .button1{
+        background-color: $secondaryColor;
+    }
+    .button2{
+        background-color: $primaryColor;
+    }
 }
