--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -8,7 +8,7 @@
             <h1>Playx</h1>
         </span>
         <span class="example-spacer"></span>
-        <span>
+        <span (click)="goProfile()">
             <img id="user_profile" [src]="profile">
         </span>
         <span>
