--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -35,7 +35,7 @@ $frontend-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 $primaryColor: #68A2FF;
-$primaryLigthColor: #7CB3FF;
+$primaryLigthColor: #A6CBFF;
 $primaryDarkColor: #5E92FC;
 
 $secondaryColor: #FFC568;
