--- a/frontend/src/app/user-card/user-card.component.html
+++ b/frontend/src/app/user-card/user-card.component.html
@@ -1,1 +1,34 @@
-<p>user-card works!</p>
+<mat-card class="example-card">
+    <mat-card-header>
+        <div mat-card-avatar>
+            <img id="user_profile" [src]="profile_picture">
+        </div>
+        <mat-card-title>{{username}}</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <div class="grid">
+            <div *ngIf="firstName">
+                <p>First Name</p>
+                <p>{{firstName}}</p>
+            </div>
+            <div *ngIf="lastName">
+                <p>Last Name</p>
+                <p>{{lastName}}</p>
+            </div>
+            <div>
+                <p>Followers</p>
+                <p>{{followers}}</p>
+            </div>
+            <div>
+                <p>Followings</p>
+                <p>{{followings}}</p>
+            </div>
+        </div>
+        <div *ngIf="MyUser; else elseBlock" class="boton">
+            <button (click)="goEditProfile()">Edit</button>
+        </div>
+        <ng-template #elseBlock class="boton">
+            <button (click)="follow()">Follow</button>
+        </ng-template>
+    </mat-card-content>
+</mat-card>
