--- a/frontend/src/app/navbar/navbar.component.scss
+++ b/frontend/src/app/navbar/navbar.component.scss
@@ -21,7 +21,7 @@
         flex: 1 1 auto;
     }
 
-    #user_profile {
+    #my_user_profile {
         width: 80px;
         height: 80px;
         border-radius: 50%;
@@ -31,4 +31,23 @@
     p{
         @include titleFont(20px);
     }
+
+    input {
+        @include contentFont(20px);
+        border: 2px solid $primaryColor;
+        border-radius: 5px;
+        margin: 8px 0;
+        width: 200px;
+    }
+}
+
+mat-option{
+    padding-bottom: 10px;
+}
+
+#user_profile {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    cursor: pointer;
 }
