--- a/frontend/src/app/search/search.component.html
+++ b/frontend/src/app/search/search.component.html
@@ -1,10 +1,8 @@
-<p>search works!</p>
 <form class="example-form">
-    <mat-label>Users</mat-label>
-    <input matInput aria-label="State" [matAutocomplete]="auto" [formControl]="myControl">
+    <input aria-label="State" (keyup.enter)="goProfile()" [(ngModel)]="username" [matAutocomplete]="auto" [formControl]="myControl">
     <mat-autocomplete #auto="matAutocomplete">
         <mat-option *ngFor="let user of filteredOptions | async" [value]="user.username">
-            <img id="user_profile" [src]="user.profile_picture" height="25">
+            <img id="user_profile" [src]="user.profile_picture">
             <span>{{user.username}}</span>
         </mat-option>
     </mat-autocomplete>
