--- a/frontend/src/app/search/search.component.scss
+++ b/frontend/src/app/search/search.component.scss
@@ -1,9 +1,21 @@
 @import '../../styles.scss';
 @import '../../fonts.scss';
 
+input {
+    @include contentFont(20px);
+    border: 2px solid $primaryColor;
+    border-radius: 5px;
+    margin: 8px 0;
+    width: 200px;
+}
+
+mat-option{
+    padding-bottom: 10px;
+}
+
 #user_profile {
-    width: 80px;
-    height: 80px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     cursor: pointer;
 }
