Añadido soporte para imágenes y preview

--- a/frontend/src/app/create-post/create-post.component.scss
+++ b/frontend/src/app/create-post/create-post.component.scss
@@ -53,5 +53,13 @@ mat-card{
                 cursor: pointer;
             }
         }
+
+        #post_file{
+            padding-top: 10px;
+            padding-bottom: 5px;
+            margin: auto;
+            width: 100%;
+            height: 200px;
+        }
     }
 }
