--- a/frontend/src/app/post-card/post-card.component.scss
+++ b/frontend/src/app/post-card/post-card.component.scss
@@ -31,6 +31,12 @@ mat-card{
     cursor: pointer;
 }
 
+.div_post_image{
+    margin: auto;
+    width: 80%;
+}
+
 #post_image{
     width: 100%;
+    height: 100%;
 }
