--- a/frontend/src/app/create-post/create-post.component.html
+++ b/frontend/src/app/create-post/create-post.component.html
@@ -10,7 +10,8 @@
                 <div class="div_label_file">
                     <label role="button" type="button" for="file" class="label_file">Choose files</label>
                 </div>
-                <input id="file" type="file" (change)="fileEvent($event)" class="form-control" formControlName="post_file">
+                <input id="file" accept="image/*" type="file" (change)="fileEvent($event)" class="form-control" formControlName="post_file">
+                <img id="post_file" *ngIf="imagePreview && imagePreview !== ''" [src]="imagePreview">
                 <br>
                 <div class="send_button">
                     <button type="submit">Send</button>
