--- a/frontend/src/app/edit-profile/edit-profile.component.scss
+++ b/frontend/src/app/edit-profile/edit-profile.component.scss
@@ -117,3 +117,12 @@ button{
     border-radius: 15px;
     cursor: pointer;
 }
+
+#img{
+    padding-top: 10px;
+    padding-bottom: 5px;
+    margin: auto;
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+}
