Añadido sistema de follows, trabajando en follows-siteñ

--- a/frontend/src/app/edit-profile/edit-profile.component.html
+++ b/frontend/src/app/edit-profile/edit-profile.component.html
@@ -63,3 +63,6 @@
         </mat-card-content>
     </mat-card>
 </div>
+<div class="grid1">
+    <button (click)="deleteUser()" class="buttonDelete" type="submit">Delete account</button>
+</div>
