--- a/frontend/src/app/edit-profile/edit-profile.component.scss
+++ b/frontend/src/app/edit-profile/edit-profile.component.scss
@@ -106,6 +106,10 @@
     background-color: $secondaryColor;
 }
 
+.buttonDelete{
+    background-color: $errorColor;
+}
+
 button{
     margin: auto;
     width: 60%;
