--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -13,5 +13,5 @@
         [post]="possit.post" [file_name]="possit.file_name" [created_at]="possit.created_at"></app-post-card>
 </div>
 <div class="user_card">
-    <app-user-card [MyUser]="MyUser" [username]="username" [profile_picture]="profile_picture" [firstName]="user.firstName" [lastName]="user.lastName" [followers]="user.followers" [followings]="user.followings"></app-user-card>
+    <app-user-card [MyUser]="MyUser" [Following]="user.user_follow" [username]="username" [profile_picture]="profile_picture" [firstName]="user.firstName" [lastName]="user.lastName" [followers]="user.followers" [followings]="user.followings"></app-user-card>
 </div>
