--- a/frontend/src/app/user-card/user-card.component.scss
+++ b/frontend/src/app/user-card/user-card.component.scss
@@ -32,16 +32,21 @@ mat-card{
     .boton{
         margin: auto;
         width: 60%;
-    }
-    button{
-        width: 100%;
-        height: 40px;
-        margin-top: 10px;
-        @include titleFont(20px);
-        border: none;
-        border-radius: 15px;
-        cursor: pointer;
-        background-color: $secondaryDarkColor;
+        .buttonOk {
+            background-color: $secondaryDarkColor;
+        }
+        .buttonError{
+            background-color: $errorColor;
+        }
+        button{
+            width: 100%;
+            height: 40px;
+            margin-top: 10px;
+            @include titleFont(20px);
+            border: none;
+            border-radius: 15px;
+            cursor: pointer;
+        }
     }
 }
 
