--- a/frontend/src/app/post-card/post-card.component.scss
+++ b/frontend/src/app/post-card/post-card.component.scss
@@ -21,6 +21,8 @@ mat-card{
         border-bottom-right-radius: 5px;
         background-color: $secondaryLigthColor;
         @include contentFont(16px);
+        //Para que el tento se mantega dentro del recuadro
+        word-break: break-all;
     }
 }
 
