--- a/frontend/src/app/sidenav/sidenav.component.scss
+++ b/frontend/src/app/sidenav/sidenav.component.scss
@@ -6,11 +6,10 @@
     height: 100%;
     width: 250px;
     position: fixed;
-    z-index: 1;
-    top: 12%;
+    top: 8%;
     left: 0;
     overflow-x: hidden;
-    padding-top: 20px;
+    padding-top: 2%;
     cursor: pointer;
     a{
         padding: 8px 8px 8px 32px;
