Añadido post-final, trabajando con snackbar

--- a/frontend/src/app/profile/profile.component.scss
+++ b/frontend/src/app/profile/profile.component.scss
@@ -20,3 +20,13 @@
     left: 76%;
     top: 12%;
 }
+
+.final{
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+// .red-snackbar {
+//     background: #F44336 !important;
+//     color: white !important;
+// }
