--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div [alwaysCallback]="true" [infiniteScrollDistance]="2" [infiniteScrollThrottle]="1000" infinite-scroll (scrolled)="reloadPosts()" class="tab">
+<div class="tab">
     <mat-card>
         <mat-card-content>
             <h2 *ngIf="MyUser; else elseBlock">My Posts</h2>
@@ -8,10 +8,15 @@
         </mat-card-content>
     </mat-card>
 </div>
+<div *ngIf="final == false" [alwaysCallback]="true" [infiniteScrollDistance]="2" [infiniteScrollThrottle]="1000" infinite-scroll (scrolled)="reloadPosts()"></div>
 <div *ngFor="let possit of posts" class="post_card">
     <app-post-card [id]="possit.id" [username]="possit.username" [profile_picture]="profile_picture"
         [post]="possit.post" [file_name]="possit.file_name" [created_at]="possit.created_at"></app-post-card>
 </div>
+<div *ngIf="final" class="final">
+    <app-post-final></app-post-final>
+</div>
+
 <div class="user_card">
-    <app-user-card [MyUser]="MyUser" [Following]="user.user_follow" [username]="username" [profile_picture]="profile_picture" [firstName]="user.firstName" [lastName]="user.lastName" [followers]="user.followers" [followings]="user.followings"></app-user-card>
+    <app-user-card [MyUser]="MyUser" [Following]="user?.user_follow" [username]="username" [profile_picture]="profile_picture" [firstName]="user?.firstName" [lastName]="user?.lastName" [followers]="user?.followers" [followings]="user?.followings"></app-user-card>
 </div>
