--- a/frontend/src/app/profile/profile.component.scss
+++ b/frontend/src/app/profile/profile.component.scss
@@ -26,7 +26,7 @@
     padding-bottom: 15px;
 }
 
-// .red-snackbar {
-//     background: #F44336 !important;
-//     color: white !important;
-// }
+.red-snackbar {
+    --mdc-snackbar-container-color: #FF5449 !important;
+    color: white !important;
+}
