--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
@@ -9,11 +8,22 @@
 // Be sure that you only ever include this mixin once!
 @include mat.core();
 
+$md-error: (
+    200 : #FF5449,
+    500 : #FF5449,
+    700 : #FF5449,
+    contrast: (
+        200 : #000000,
+        500 : #000000,
+        700 : #000000,
+    )
+);
+
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$frontend-primary: mat.define-palette(mat.$indigo-palette);
-$frontend-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$frontend-primary: mat.define-palette($md-error, 500, 200, 700);
+$frontend-accent: mat.define-palette($md-error, 500, 200, 700);
 
 // The warn palette is optional (defaults to red).
 $frontend-warn: mat.define-palette(mat.$red-palette);
@@ -48,12 +58,23 @@ $successColor: greenyellow;
 $textColor: #000000;
 $bgColor: #FFFFFF;
 
+.mat-mdc-snack-bar-container {
+  --mat-mdc-snack-bar-button-color: #000000;
+  --mdc-snackbar-supporting-text-color: #000000;
+
+  &.app-notification-error {
+    --mdc-snackbar-container-color: #FF5449;
+  }
+
+  &.app-notification-success {
+    --mdc-snackbar-container-color: greenyellow;
+  }
+
+  button{
+    color: #000000 !important;
+  }
+}
+
 html{ background-color: $primaryLigthColor;}
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
