--- a/frontend/src/app/sidenav/sidenav.component.scss
+++ b/frontend/src/app/sidenav/sidenav.component.scss
@@ -1,7 +1,7 @@
 @import '../../styles.scss';
 @import '../../fonts.scss';
 
-.enlaces{
+.enlaces {
     background-color: $primaryColor;
     height: 100%;
     width: 250px;
@@ -11,7 +11,8 @@
     overflow-x: hidden;
     padding-top: 2%;
     cursor: pointer;
-    a{
+
+    a {
         padding: 8px 8px 8px 32px;
         text-decoration: none;
         font-size: 27px;
@@ -19,4 +20,17 @@
         display: block;
         transition: 0.3s;
     }
+
+}
+
+.reload {
+    width: 100%;
+    height: 40px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    @include contentFont(20px);
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+    background-color: $secondaryColor;
 }
