--- a/frontend/src/app/notification-card/notification-card.component.scss
+++ b/frontend/src/app/notification-card/notification-card.component.scss
@@ -7,7 +7,6 @@ mat-card{
     margin-bottom: 5px;
     mat-card-header{
         border-radius: 5px;
-        background-color: $secondaryLigthColor;
         mat-card-title{
             @include contentFont(20px);
         }
@@ -20,6 +19,7 @@ mat-card{
             color: #FFFFFF;
             border-radius: 50%;
         }
+
     }
 }
 
@@ -27,4 +27,11 @@ mat-card{
     width: 130%;
     height: 130%;
     border-radius: 50%;
+}
+
+.notSaw{
+    background-color: $secondaryLigthColor;
+}
+.saw{
+    background-color: $primaryLigthColor;
 }
