--- a/frontend/src/app/sidenav/sidenav.component.html
+++ b/frontend/src/app/sidenav/sidenav.component.html
@@ -1,10 +1,10 @@
 <div class="enlaces">
     <a routerLink="home" routerLinkActive="active-link"><span class="material-symbols-outlined">home</span> Home</a>
     <a routerLink="follows" routerLinkActive="active-link"><span class="material-symbols-outlined">group</span> Followings</a>
-    <a routerLinkActive="active-link" [matMenuTriggerFor]="menu"><span class="material-symbols-outlined">notifications</span> Notifications</a>
+    <a routerLinkActive="active-link" (click)="getNotifications()" [matMenuTriggerFor]="menu"><span class="material-symbols-outlined">notifications</span> Notifications</a>
     <mat-menu class="x" #menu xPosition="after">
         <div class="notifications" *ngFor="let noti of notifications">
-            <button (click)="redirect(noti.username)" mat-menu-item>
+            <button (click)="seeing_redirect(noti.username, noti.id)" mat-menu-item>
                 <app-notification-card [noti]="noti"></app-notification-card>
             </button>
         </div>
