--- a/frontend/src/app/post-card/post-card.component.scss
+++ b/frontend/src/app/post-card/post-card.component.scss
@@ -23,6 +23,10 @@ mat-card{
         @include contentFont(16px);
         //Para que el tento se mantega dentro del recuadro
         word-break: break-all;
+        a{
+            text-decoration: none;
+            color: black;
+        }
     }
 }
 
