--- a/frontend/src/app/sidenav/sidenav.component.html
+++ b/frontend/src/app/sidenav/sidenav.component.html
@@ -1,7 +1,7 @@
 <div class="enlaces">
     <a routerLink="home" routerLinkActive="active-link"><span class="material-symbols-outlined">home</span> Home</a>
     <a routerLink="follows" routerLinkActive="active-link"><span class="material-symbols-outlined">group</span> Followings</a>
-    <a routerLinkActive="active-link" (click)="getNotifications()" [matMenuTriggerFor]="menu"><span class="material-symbols-outlined">notifications</span> Notifications</a>
+    <a routerLinkActive="active-link" (click)="getNotifications()" [matMenuTriggerFor]="menu"><span  class="badge" matBadge="{{not_seen}}" matBadgeSize="medium" class="material-symbols-outlined">notifications</span> Notifications</a>
     <mat-menu class="x" #menu xPosition="after">
         <div class="notifications" *ngFor="let noti of notifications">
             <button (click)="seeing_redirect(noti.username, noti.id)" mat-menu-item>
